--- a/calculator.html
+++ b/calculator.html
@@ -5,49 +5,51 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>máy tính đơn giản google</title>
-   
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
-    <table class="calculator">
+    <form action="">
+        <table class="calculator">
         <tr>
-            <td colspan="5"><input class = "displayBox" type="text" id="result" placeholder="0"></td>
+            <td colspan="5"><input id = "displayBox" type="text"  value ="0"></td>
         </tr>
         <tr>
-            <td><input class="button" type="button" id="" value="n!" onclick="giaiThua()"></td>
-            <td> <input  class="button" type="button" value="(" onclick="display('(')"></td>
-            <td><input  class="button" type="button" value=")" onclick="display(')')"></td>
-            <td><input  class="button" type="button" value="%" onclick="phanTram()"></td>
-            <td><input  class="button" type="button" value="AC" onclick="clearScreen()"></td>
+            <td><input   class="button" type="button" id="" value="n!" onclick="if(checkNum(form.displayBox.value)) {giaiThua(this.form)}"></td>
+            <td><input  class="button" type="button" value="(" onclick="addChar(this.form.displayBox, '(')"></td>
+            <td><input  class="button" type="button" value=")" onclick="addChar(this.form.displayBox, ')')"></td>
+            <td><input  class="button" type="button" value="%" onclick="percent(this.form.displayBox)"></td>
+            <td><input  class="button" type="button" value="AC" onclick="this.form.displayBox.value = 0"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value="&#8730;n" onclick="sqrt()"></td>
-            <td><input  class="buttonSo" type="button" value="7" onclick="display('7')"></td>
-            <td><input  class="buttonSo" type="button" value="8" onclick="display('8')"></td>
-            <td><input  class="buttonSo" type="button" value="9" onclick="display('9')"></td>
-            <td><input  class="button" type="button" value = "/" onclick="chia()"></td>
+            <td><input  class="button" type="button" value="&#8730;n" onclick="if(checkNum(this.form.displayBox)) {sqrt(this.form)}"></td>
+            <td><input  class="buttonSo" type="button" value="7" onclick="addChar(this.form.displayBox, '7')"></td>
+            <td><input  class="buttonSo" type="button" value="8" onclick="addChar(this.form.displayBox, '8')"></td>
+            <td><input  class="buttonSo" type="button" value="9" onclick="addChar(this.form.displayBox, '9')"></td>
+            <td><input  class="button" type="button" value = "/" onclick="addChar(this.form.displayBox,'/')"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value = "n&#178;" onclick="binhPhuong()"></td>
-            <td><input  class="buttonSo" type="button" value="4" onclick="display('4')"></td>
-            <td><input  class="buttonSo" type="button" value="5" onclick="display('5')"></td>
-            <td><input  class="buttonSo" type="button" value="6" onclick="display('6')"></td>
-            <td><input  class="button" type="button" value = "*" onclick="nhan()"></td>
+            <td><input  class="button" type="button" value = "n&#178;" onclick="if(checkNum(this.form.displayBox)) {square(this.form)}"></td>
+            <td><input  class="buttonSo" type="button" value="4" onclick="addChar(this.form.displayBox, '4')"></td>
+            <td><input  class="buttonSo" type="button" value="5" onclick="addChar(this.form.displayBox, '5')"></td>
+            <td><input  class="buttonSo" type="button" value="6" onclick="addChar(this.form.displayBox, '6')"></td>
+            <td><input  class="button" type="button" value = "*" onclick="addChar(this.form.displayBox, '*')"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value = "x^y" onclick="luyThua()"></td>
-            <td><input  class="buttonSo" type="button" value="1" onclick="display('1')"></td>
-            <td><input  class="buttonSo" type="button" value="2" onclick="display('2')"></td>
-            <td><input  class="buttonSo" type="button" value="3" onclick="display('3')"></td>
-            <td><input  class="button" type="button" value = "-" onclick="tru()"></td>
+            <td><input  class="button" type="button" value = "x^y" onclick="addChar(this.form.displayBox, '^')"></td>
+            <td><input  class="buttonSo" type="button" value="1" onclick="addChar(this.form.displayBox, '1')"></td>
+            <td><input  class="buttonSo" type="button" value="2" onclick="addChar(this.form.displayBox, '2')"></td>
+            <td><input  class="buttonSo" type="button" value="3" onclick="addChar(this.form.displayBox, '3')"></td>
+            <td><input  class="button" type="button" value = "-" onclick="addChar(this.form.displayBox, '-')"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value = "pi" onclick="display('Math.PI')"></td>
-            <td><input  class="buttonSo" type="button" value="0" onclick="display('0')"></td>
-            <td><input  class="button" type="button" value="." onclick="display('.')"></td>
-            <td><input  class="button" type="button" value="=" onclick="calcutate()"></td>
-            <td><input  class="button" type="button" value = "+" onclick="cong()"></td>
+            <td><input  class="button" type="button" value = "pi" onclick="addChar(this.form.displayBox, '3.14159265359')"></td>
+            <td><input  class="buttonSo" type="button" value="0" onclick="addChar(this.form.displayBox, '0')"></td>
+            <td><input  class="button" type="button" value="." onclick="addChar(this.form.displayBox, '.')"></td>
+            <td><input  class="button" type="button" value="=" onclick="if(checkNum(this.form.displayBox)) {calculate(this.form)} "></td>
+            <td><input  class="button" type="button" value = "+" onclick="addChar(this.form.displayBox, '+')"></td>
         </tr>
-    </table>
+        </table>
+    </form>
     <script src="calculator.js"></script>
 </body>
 </html>
