--- a/calculator.html
+++ b/calculator.html
@@ -8,33 +8,37 @@
     <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
-    <form action="">
+    <form>
         <table class="calculator">
         <tr>
-            <td colspan="5"><input id = "displayBox" type="text"  value ="0"></td>
+            <td colspan="6"><input class = "displayBox" type="text" id = "displayBox" value ="0"></td>
         </tr>
         <tr>
-            <td><input   class="button" type="button" id="" value="n!" onclick="if(checkNum(form.displayBox.value)) {factorial(this.form)}"></td>
+            <td><input  class="button" type="button" value="sin" onclick="if(checkNum(displayBox.value)) {sin()}"></td>
+            <td><input  class="button" type="button" value="n!" onclick="if(checkNum(form.displayBox.value)) {factorial()}"></td>
             <td><input  class="button" type="button" value="(" onclick="addChar(this.form.displayBox, '(')"></td>
             <td><input  class="button" type="button" value=")" onclick="addChar(this.form.displayBox, ')')"></td>
             <td><input  class="button" type="button" value="%" onclick="percent(this.form.displayBox)"></td>
             <td><input  class="button" type="button" value="AC" onclick="this.form.displayBox.value = 0"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value="&#8730;n" onclick="if(checkNum(this.form.displayBox)) {sqrt(this.form)}"></td>
+            <td><input  class="button" type="button" id="" value="cos" onclick="if(checkNum(form.displayBox.value)) {cos()}"></td>
+            <td><input  class="button" type="button" value="&#8730;n" onclick="if(checkNum(this.form.displayBox)) {sqrt()}"></td>
             <td><input  class="buttonNum" type="button" value="7" onclick="addChar(this.form.displayBox, '7')"></td>
             <td><input  class="buttonNum" type="button" value="8" onclick="addChar(this.form.displayBox, '8')"></td>
             <td><input  class="buttonNum" type="button" value="9" onclick="addChar(this.form.displayBox, '9')"></td>
             <td><input  class="button" type="button" value = "/" onclick="addChar(this.form.displayBox,'/')"></td>
         </tr>
         <tr>
-            <td><input  class="button" type="button" value = "n&#178;" onclick="if(checkNum(this.form.displayBox)) {square(this.form)}"></td>
+            <td><input  class="button" type="button" value="tan" onclick="if(checkNum(form.displayBox.value)) {tan()}"></td>
+            <td><input  class="button" type="button" value = "n&#178;" onclick="if(checkNum(this.form.displayBox)) {square()}"></td>
             <td><input  class="buttonNum" type="button" value="4" onclick="addChar(this.form.displayBox, '4')"></td>
             <td><input  class="buttonNum" type="button" value="5" onclick="addChar(this.form.displayBox, '5')"></td>
             <td><input  class="buttonNum" type="button" value="6" onclick="addChar(this.form.displayBox, '6')"></td>
             <td><input  class="button" type="button" value = "*" onclick="addChar(this.form.displayBox, '*')"></td>
         </tr>
         <tr>
+            <td><input  class="button" type="button" id="" value="1/x" onclick="if(checkNum(form.displayBox.value)) {reverse()}"></td>
             <td><input  class="button" type="button" value = "x^y" onclick="addChar(this.form.displayBox, '^')"></td>
             <td><input  class="buttonNum" type="button" value="1" onclick="addChar(this.form.displayBox, '1')"></td>
             <td><input  class="buttonNum" type="button" value="2" onclick="addChar(this.form.displayBox, '2')"></td>
@@ -42,11 +46,12 @@
             <td><input  class="button" type="button" value = "-" onclick="addChar(this.form.displayBox, '-')"></td>
         </tr>
         <tr>
+            <td><input  class="button" type="button" value="&#8592;" onclick="deleteChar(this.form.displayBox)"></td>
             <td><input  class="button" type="button" value = "pi" onclick="addChar(this.form.displayBox, '3.14159265359')"></td>
-            <td><input  class="buttonNum" type="button" value="0" onclick="addChar(this.form.displayBox, '0')"></td>
             <td><input  class="button" type="button" value="." onclick="addChar(this.form.displayBox, '.')"></td>
-            <td><input  class="button" type="button" value="=" onclick="if(checkNum(this.form.displayBox)) {calculate(this.form)} "></td>
+            <td><input  class="buttonNum" type="button" value="0" onclick="addChar(this.form.displayBox, '0')"></td>
             <td><input  class="button" type="button" value = "+" onclick="addChar(this.form.displayBox, '+')"></td>
+            <td><input  class="button" type="button" value="=" onclick="if(checkNum(this.form.displayBox)) {calculate()} "></td>
         </tr>
         </table>
     </form>
